navbar sticky and big gap on card fixed

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
     height: 68px;
     padding: 0 20px;
     width: 100%;
+    position: sticky;
+    z-index: 100;
+        top: 0;
 }
 
 .navbar-inner {
@@ -120,12 +123,16 @@ a:hover {
     align-items: start;
    background-color: #1a1a1a;
    padding: 1.5rem 2rem;
+     position: sticky;
+    z-index: 100;
+        top: 68px;
    border-bottom: 1px solid #2a2a2a;
-   opacity: 0;
+     border-top: 1px solid #2a2a2a;
    transition: opacity 0.3s ease;
    transform: translateY(-10px);
   transition: transform 0.3s ease, opacity 0.3s ease;
-  border-top: 1px solid #2a2a2a;
+  
+
 }
 
 .mobile-links a {
@@ -160,7 +167,7 @@ a:hover {
 
 .menu-toggle:checked ~ .mobile-links,
 .menu-toggle:checked ~ * .mobile-links {
-  opacity: 1;
+  display: flex;
   transform: translateY(0);
 }
 
@@ -346,11 +353,14 @@ width: 100%;
 
 @media (max-width: 768px) {
   
+
+
 .highest-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 1.5rem 2rem 1.5rem;
+    padding: 3rem 1.5rem 2rem 1.5rem;
+    
 }
 
 .right-hero-container {
@@ -368,7 +378,8 @@ width: 100%;
 }
 
 .mobile-links {
-    display: flex;
+    display: none;
+    
 }
 
 .right-hero {
